# discord-bot

./: .env.sample  .gitignore  Dockerfile  README.md  auto_access.py  bot.py  downloaded_audio.webm  main.py  pyproject.toml
.github/workflows/: docker.yaml
classes/: embed_view.py  track.py
cogs/: music.py  test.py  util.py
embeds/: queue.py  track.py  utils.py
functions/: join.py  leave.py  play_youtube.py
functions/music/: play.py  play_youtube.py  youtube.py
functions/utils/: twitter.py
resource/: meigen.py
