[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["void2610"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"
discord-py = "^2.3.2"
ffmpeg-python = "^0.2.0"
python-dotenv = "^1.0.0"
py-cord = { extras = ["voice"], version = "^2.4.1" }
yt-dlp = "^2023.12.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
